<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/Calcibg"
        android:padding="10dp"

        android:textSize="45sp"
        android:gravity="end|bottom"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:text="7"
            android:textSize="32sp"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />
        <Button

            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:text="@string/_8"
            android:textSize="32sp"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:text="@string/_9"
            android:textSize="32sp"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onOperator"
            android:layout_weight="1"
            android:text="@string/Devide"
            android:textSize="37sp"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:text="@string/_4"
            android:textSize="32sp"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />
        <Button

            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:text="@string/_5"
            android:textSize="32sp"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:text="@string/_6"
            android:textSize="32sp"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onOperator"
            android:layout_weight="1"
            android:text="@string/multiply"
            android:textSize="40sp"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:text="@string/_1"
            android:textSize="32sp"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />
        <Button

            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:text="@string/_2"
            android:textSize="32sp"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:text="@string/_3"
            android:textSize="32sp"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onOperator"
            android:layout_weight="1"
            android:text="-"
            android:textSize="40sp"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnDecimal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDecimalPoint"
            android:layout_weight="1"
            android:text="@string/dot"
            android:textSize="20sp"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:text="@string/_0"
            android:textSize="32sp"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />


        <Button
            android:id="@+id/btnCLR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onClear"
            android:layout_weight="1"
            android:text="@string/clr"
            android:textSize="20sp"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onOperator"
            android:layout_weight="1"
            android:text="@string/Plus"
            android:textSize="40sp"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onEqual"
            android:layout_weight="1"
            android:text="@string/equal"
            android:textSize="45sp"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />



    </LinearLayout>
</LinearLayout>